[package]
name = "pallet-marketplace"
version = "5.1.0"
authors = ["GalacticCoucil"]
description = "The marketplace for trading NFTs"
edition = "2018"
homepage = "https://github.com/galacticcouncil/Basilisk-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/Basilisk-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
serde = {  workspace = true, optional = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-arithmetic = { workspace = true }
sp-io = { workspace = true }
pallet-uniques = { workspace = true }

# Warehouse dependency
pallet-nft = { workspace = true }

# local dependency
primitives = { default-features = false, path = "../../primitives" }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
pretty_assertions = { workspace = true }

[features]
default = ["std"]
std = [
    "serde/std",
    "scale-info/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "pallet-nft/std",
    "pallet-uniques/std",
    "pallet-balances/std",
    "primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
