[package]
authors = ['GalacticCouncil']
description = 'Price Oracle Pallet'
edition = '2018'
homepage = 'https://github.com/galacticcouncil/basilisk-node'
license = 'Apache 2.0'
name = 'pallet-price-oracle'
repository = 'https://github.com/galacticcouncil/basilisk-node'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = {package = 'substrate-wasm-builder', version = '3.0.0'}

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
#primitive-types = {default-features = false, version = '0.8.0'}
serde = {features = ['derive'], optional = true, version = '1.0.101'}

# Local dependencies
primitives = {path = '../../primitives', default-features = false}

# Substrate dependencies
#frame-benchmarking = {default-features = false, optional = true, version = '3.0.0'}
frame-support = {default-features = false, version = '3.0.0'}
frame-system = {default-features = false, version = '3.0.0'}
#frame-system-benchmarking = {default-features = false, optional = true, version = '3.0.0'}
sp-core = {default-features = false, version = '3.0.0'}
sp-runtime = {default-features = false, version = '3.0.0'}
sp-std = {default-features = false, version = '3.0.0'}

[dev-dependencies]
sp-io = {default-features = false, version = '3.0.0'}

[features]
default = ['std']
std = [
  'serde',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-runtime/std',
  'sp-core/std',
  'sp-std/std',
#  'primitives/std',
]
